Fixed activity card text align

--- a/assets/additional/css/homepage.css
+++ b/assets/additional/css/homepage.css
@@ -30,6 +30,7 @@
 
 .activity-table td{
 	vertical-align: top;
+	text-align: left;
 }
 
 /*mobirise style with tweaked value*/
